# yew_worker_stylist_actions_pages_template

./: Cargo.toml  README.md  app-a4d57bf446c44c6a.js  app-a4d57bf446c44c6a_bg.wasm  index.html  worker.js  worker_bg.wasm
.github/workflows/: build.yml  deploy.yml  format.yml  test.yml
src/: agent.rs  lib.rs
src/components/: app.rs
