[package]
name = "yew_stylist_actions_worker_template"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-agent = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
stylist = { version = "0.10.1", features = ["yew_integration"] }
indexed_db_futures = "0.2.3"
anyhow = "1.0.65"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
wasm-bindgen-test = "0.3.33"
monaco = { git = "https://github.com/siku2/rust-monaco", features = ["yew-components"] }
wasm-logger = "0.2.0"
bounce = "0.3.0"
log = "0.4.17"
gloo-worker = { version = "0.2.1", features = ["futures"] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
